# Piweb

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.tunnel  Makefile  README.md  deploy_local.bat  deploy_public.bat  docker-compose.yml  init_env.bat  questions.txt  requirements.txt  setup.bat  tunnel_name.txt  tunnel_token.txt  wsgi.py
__recycle_bin/: auto_grader_web.spec  data.db-shm  data.db-wal
docs/: 67656fun_websocket推送问题诊断.md  AI续写功能设计与接入方案.md  DATABASE_MIGRATION.md  分布式推送与WebSocket链路问题记录.md
grader/: CMakeLists.txt
grader/include/: grader_common.h
grader/src/: add_questions.c  cli_exam.c  cli_history.c  cli_utils.c  get_answer.c  get_data.c  grading.c  main.c  put_questions.c
nginx/: entrypoint.sh  nginx.conf
nginx/conf.d/: default.conf  default.conf.template
nginx/ssl/: dev.crt  dev.key  fullchain.pem  privkey.pem  server.crt  server.key
scripts/: _common.sh  deploy_local.bat  deploy_local.ps1  deploy_public.bat  deploy_public.ps1  diagnose.sh  init_env.bat  init_env.ps1  migrate_to_postgres.py  migrate_to_sql.py  restart.sh  start.sh  stop.sh  stop_db.sh
src/: main.c
text_analyzer/: CMakeLists.txt
text_analyzer/dict/Chinese/: IT.txt  stop_words_cn.txt
text_analyzer/include/: analyzer_common.h
text_analyzer/src/: analyzer.c  main.c
web/: __init__.py  admin_view.py  app.py  celery_worker.py  config.py  docker_entrypoint.sh  extensions.py  forum_routes.py  models.py  requirements.txt  socketio_entry.py  tasks.py  uploads_config.py  wsgi.py
web/blueprints/: __init__.py  admin.py  ai.py  (+8 more)
(+54 files in other folders)
